Clean up for push

--- a/404.md
+++ b/404.md
@@ -7,4 +7,6 @@ navmenu: /
 title: Page Not Found
 
 ---
-Oops...page not found. Try using the navigation to find the page you want.
+Oops...page not found.
+
+Try using the navigation to find the page you want.
